manifests/service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-diplom-app-service
  namespace: cicd
  labels:
    app: devops-diplom-app
spec:
  selector:
    app: devops-diplom-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
  externalTrafficPolicy: Local
