manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-diplom-app
  labels:
    app: devops-diplom-app
spec:
  type: NodePort
  selector:
    app: devops-diplom-app
  ports:
    - name: http
      port: 80
      targetPort: 80
